Resolve overflow issues on mobile and adjust hide show button sizes.

--- a/index.css
+++ b/index.css
@@ -18,8 +18,6 @@
 }
 
 body {
-    overflow: hidden;
-
     perspective: 2550px;
 
     margin: 0;
@@ -30,6 +28,8 @@ body {
 }
 
 .viewport {
+    position: relative;
+
     overflow: hidden;
 
     width: 100%;
@@ -821,13 +821,24 @@ footer {
 button.hide__show {
     position: absolute;
 
-    width: 10px;
-    height: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    background-color: #fff;
+    width: 30px;
+    height: 30px;
+
+    background-color: #0000;
 
     outline: none;
     border: none;
+}
+
+button.hide__show .overlay {
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+
+    background-color: #fff;
 
     clip-path: polygon(0 0, 100% 0, 50% 100%);
 }
